[gd_scene load_steps=4 format=2]

[ext_resource path="res://script/Menu.gd" type="Script" id=1]
[ext_resource path="res://sound/Dangun Feveron OST ~ Disco 999.mp3" type="AudioStream" id=2]
[ext_resource path="res://picture/menu utama.jpg" type="Texture" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 16, 9 )
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 43.0
margin_top = -204.0
margin_right = 99.0
margin_bottom = -136.0
rect_scale = Vector2( 0.996404, 0.996404 )

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 56.0
margin_bottom = 20.0
text = "Start"

[node name="OptionButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 56.0
margin_bottom = 44.0
text = "Option"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 56.0
margin_bottom = 68.0
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -26.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
